Fringer's Datapad
=================

RELEASE NOTES
-------------

1.0.12
------

- Fixed bug: clicking on the Skill dice pools incorrectly brought up the Weapons check list.

- Corrected some typos

- Change in characterics (due to Enhance) was not changing dice pools.

1.0.11
------

- Strain and wound adjustments due to morality was incorrectly doubled.

- Clicking the TOTAL XP, UNUSED XP or USED XP boxes now brings up the XP allocation dialog.

- The total XP, Obligations, Duty and Morality are now shown in the EARNED & AQUIRED box.

- Morality of non-Force users may be changed, when at 50%, the morality is display as "n/a". When not at 50%, the value is displayed.

- Inventory list and check list items now adjust to fit text.

- Display renamed item names correctly.

- Attachments that modify the base damage or crit value are now correctly applied (this fixes the problem with light saber crystals).

- Adding the same type of item with different modifications was previously not supported.

- Add Brawn to damage of lightsaber melee weapon, such as "training stick".

- Fixed a bug: some items of gear that have no book reference, were given an incorrect book reference.

- Removed description text from generic items.

- Created the [FORCEPOINT]/[FP] and [RESTRICTED]/[RE] symbols.

- Improved text of Mod descriptions.

1.0.10
------

- The setting "Locked" (which allows you to hide XP and cash) and "Hide Talents" (which allows you to hide talents that are "implemented") are now global, and work correctly when changing characters/accounts.

- Added version information to setup dialog.

- Added SWCharGen 1.7.0 data.

- Fixed bug: When reading SWCharGen 1.7.0 character sheets, Datapad was loading all Talents instead of just those purchased.