@@ -7,7 +7,9 @@ RELEASE NOTES
 1.0.12
 ------
 
-- Fixed bug: clicking on the Skill dice pools incorrectly brought up the Weapons check list.
+- Changed the design of the Skill checklist box. It now looks similar to the Weapons checklist box.
+
+- Fixed bug: clicking on the Skill dice pools incorrectly brought up the Weapons checklist.
 
 - Corrected some typos
 
